# xyz

./: .gitignore  Cargo.toml  DESIGN_DOC.md  Dockerfile  LICENSE  README.md  Rocket.toml  elm.json  makefile
migrations/2020-07-03-155648_create_blogs/: down.sql  up.sql
migrations/2020-07-08-193544_create_tags/: down.sql  up.sql
migrations/2020-07-08-193718_blogs_tags/: down.sql  up.sql
src/: github.rs  guards.rs  main.rs  routes.rs  schema.rs  utils.rs
src/database/: mod.rs  models.rs
static/components/: Components.js  TypedTitle.js
static/components/src/: MarkdownParsing.elm  TypedTitle.elm
static/data/: about.md  github_projects.json  socials.json
static/styles/: JetBrainsMono.css  JetBrainsMono.less  contants.css  contants.less  global.css  global.less  ligatures.css  ligatures.less
templates/: about.html.tera  index.html.tera
templates/blogs/: article.html.tera  form.html.tera  index.html.tera  tag.html.tera
templates/errors/: not_found.html.tera
templates/partial/: base.html.tera  footer.html.tera  head.html.tera  header.html.tera  macros.html.tera
