[package]
name = "periodicaidan_xyz"
version = "0.1.0"
authors = ["Aidan T. Manning <periodicaidan@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.5"
diesel = { version = "1.4.4", features = ["postgres", "chrono"] }
chrono = { version = "0.4.12", features = ["serde"] }
regex = "1.3.9"
lazy_static = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.56"
ureq = { version = "1.3.0", features = ["json"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "diesel_postgres_pool", "serve"]
